Update 'yhxdar3ij-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:e6f89a2823bb32d6dcd5ccc1fa659c7e35bacecf@sha256:6788463d9800209eba1f157d91d6909649d532d6be66b012321ed397cb5519d6

--- a/components/yhxdar3ij-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/yhxdar3ij-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yhxdar3ij-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:e6f89a2823bb32d6dcd5ccc1fa659c7e35bacecf@sha256:6788463d9800209eba1f157d91d6909649d532d6be66b012321ed397cb5519d6
+          name: container-image
